[gd_scene load_steps=3 format=3 uid="uid://4sdp3vpsbo5v"]

[ext_resource type="Script" uid="uid://b1uv5hrreamha" path="res://modules/menu/extras.gd" id="1_03ewq"]
[ext_resource type="Theme" uid="uid://5wgly2wlncpm" path="res://modules/menu/common/menu_theme.tres" id="1_cues5"]

[node name="Extras" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cues5")
script = ExtResource("1_03ewq")

[node name="ExtrasLabel" type="Label" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -491.0
offset_right = 226.0
offset_bottom = -371.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.32549, 0.188235, 0.129412, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 71
text = "Extras"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -356.0
offset_top = -290.0
offset_right = 356.0
offset_bottom = 376.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -267.0
offset_right = 205.0
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Credits" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Gallery" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Gallery"

[node name="Back" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Panel/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Gallery" to="." method="_on_gallery_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Back" to="." method="_on_back_pressed"]
